# morning-crew

./: .gitignore  README.md  pyproject.toml
moring_crew_core/: .env.example  conversable_crew.py  knowledge_base.db  main.py  pyproject.toml  role.py  skillset.py
moring_crew_core/config/: settings.py
moring_crew_core/moring_crew_core/: conversable_crew.py  main.py  role.py  skillset.py
moring_crew_core/moring_crew_core/skillsets/: internet_search.py  meeting_notes_draft.py
moring_crew_core/skillsets/: knowledge_base.py  meeting_notes_draft.py  twitter_search.py
moring_crew_core/util/: llm_model.py  minds_db.py  vector_db.py
myenv/: pyvenv.cfg
